...
    <string name="source_audio">Audio</string>
    <string name="source_documents">Documents</string>
    <string name="source_apps">Apps</string>
    <string name="source_recent">Recent</string>
    <string name="source_analysis">Analysis</string>
    <string name="source_trash">Trash</string>
    <string name="source_cloud">Cloud</string>
    <string name="source_smb">SMB/CIFS</string>
    <string name="source_ftp">FTP</string>
    <string name="source_live">Live</string>
    <!-- Live streaming -->
    <string name="live_feed_title">Live</string>
    <string name="live_no_streams">No streams yet.\nTap + to add one.</string>
    <string name="live_add_stream">Add stream</string>
    <string name="live_add_title">Add stream</string>
    <string name="live_edit_title">Edit stream</string>
    <string name="live_edit_stream">Edit</string>
    <string name="live_delete_stream">Delete</string>
    <string name="live_stream_options">Stream options</string>
    <string name="live_delete_title">Delete stream</string>
    <string name="live_delete_message">Delete \"%1$s\"?</string>
    <string name="live_delete_confirm">Delete</string>
    <string name="live_save">Save</string>
    <string name="live_close">Close</string>
...
    <string name="next">Next</string>
    <string name="playback_speed">Playback speed</string>
    <string name="delete_file">Delete</string>
    <string name="delete_confirm_title">Delete file?</string>
    <string name="delete_confirm_message">"%1$s" will be moved to trash.</string>
    <string name="delete_confirm">Delete</string>
    <string name="delete_cancel">Cancel</string>
    <!-- Selection mode -->
    <string name="selected_count">%1$d selected</string>
    <string name="cancel_selection">Cancel selection</string>
    <string name="delete_selected">Delete</string>
    <string name="delete_selected_title">Delete %1$d files?</string>
    <string name="delete_selected_message">Selected files will be moved to trash.</string>
...
    <string name="analysis_category_audio">Audio</string>
    <string name="analysis_category_documents">Documents</string>
    <string name="analysis_category_apps">Apps</string>
    <string name="analysis_category_other">Other</string>
    <string name="analysis_category_free">Free Space</string>
    <!-- Network Connections -->
    <string name="network_connections_title">Network Connections</string>
    <string name="network_connections_title_smb">SMB/CIFS</string>
    <string name="network_connections_title_ftp">FTP</string>
    <string name="network_connections_title_cloud">Cloud</string>
    <string name="network_no_connections">No connections yet.\nTap + to add one.</string>
    <string name="network_add_connection">Add connection</string>
    <string name="network_delete_connection">Delete connection</string>
    <string name="network_edit_connection">Edit connection</string>
    <string name="network_delete_title">Delete connection?</string>
    <string name="network_delete_message">\"%1$s\" will be removed.</string>
    <string name="network_delete_confirm">Delete</string>
    <!-- Add Network Connection -->
    <string name="add_connection_title">Add Connection</string>
    <string name="edit_connection_title">Edit Connection</string>
    <string name="add_connection_protocol">Protocol</string>
    <string name="add_connection_host">Host</string>
    <string name="add_connection_port">Port</string>
    <string name="add_connection_username">Username</string>
    <string name="add_connection_password">Password</string>
    <string name="add_connection_anonymous">Anonymous</string>
...
